--- a/report/id1212-report-template.tex
+++ b/report/id1212-report-template.tex
@@ -7,85 +7,184 @@
 \usepackage{wrapfig}
 \usepackage{fancyvrb}
 \usepackage{fancyhdr}
+\usepackage{hyperref}
 \pagestyle{fancy}
+
+\catcode`\_=\active
+\protected\def_#1_{\textit{#1}}
 
 % Create header and footer
 \headheight 27pt
 \pagestyle{fancyplain}
 \lhead{\footnotesize{Network Programming, ID1212}}
-\chead{\footnotesize{Name of the Report}}
+\chead{\footnotesize{Non-blocking Sockets}}
 \rhead{}
 \lfoot{}
-\cfoot{\thepage\ (\pageref{LastPage})}
+\cfoot{\thepage}
 \rfoot{}
 
 % Create title page
-\title{Name of the Report}
+\title{Assignment 1 - Non-blocking sockets}
 \subtitle{Network Programming, ID1212}
-\author{Your Name and Email Address}
-\date{Date}
+\author{Bernardo Gonzalez Riede, begr@kth.se}
+\date{\today}
 
 \begin{document}
 
 \maketitle
 
-\section*{Tips for Report Writing}
-\textbf{REMOVE THIS SECTION BEFORE SUBMITTING THE REPORT.}\\
-
-\noindent \textit{The target audience has exactly the same skills as the author, except they do not know anything at all about the specific program described in the report.} \\
-
-Consider the following:
-
-\begin{itemize}
-  \item \textbf{The report must be \textit{centered around the requirements}. Which are they (Introduction), how did you work to meet them (Method), what is the solution that meets them (Result), and how can you be sure they are met (Discussion). This is the IMRaD method.}
-
-  \item \textbf{The report must show that you have done the work yourself and that you have understood what you have done. Both of these goals are met by carefully explaining the source code.}
-
-  \item Is spelling and grammar correct? Is spoken language avoided?
-
-  \item Does the report have a good structure with sections, subsections and paragraphs?
-
-  \item Is the solution clearly explained? Will the reader understand the program? What would you yourself want to know if you read about the program, is that included in the report?
-
-  \item Is the solution analyzed and evaluated? Are important properties of the program explained? Should there have been more extensive evaluation?
-
-  \item Is the text clarified with images and/or other figures, and with links to the code in your Git repository? Remember that all figures (images, tables, graphs, code listings, etc) shall be numbered and have a short explaining text.
-\end{itemize}
 
 \section{Introduction}
 
-\textbf{This section tells \textit{what} are you going to do.} \\
 
-\noindent Explain the task and the requirements on the solution. It is very important to \textit{clearly state the requirements}. If you wrote the program together with other students, list their names and email addresses here.
+\begin{itemize}
+    \item Server and client have to communicate via blocking TCP connections.
+    TCP is a transport protocol for a network, guaranteeing no lost packets iff a connection is established.
+    Moreover, it uses a sequence number to ensure delivery in correct order.
+    \item The client must not store any data.
+    A stateless implementation of the client is preferred.
+    \item The client must have a responsive user interface, i.e. being able to type commands while previous ones are still processed.
+    This is at least best practice, if not a requirement in all programs.
+    \item The server should be able to handle several clients simulteanously.
+    Every client has to have its own game which doesn't get affected by other players.
+\end{itemize}
+
 
 \section{Literature Study}
 
-This section must prove that you collected sufficient knowledge before starting development, instead of just hacking away without knowing how to complete the task. State what you have read and briefly summarize what you have learned.
+The main literature for this assignment was a combination of all the videos related to streams and sockets, i.e. streams-, file-handler-prog-example-,
+    sockets-, chat-program-part*.webm, and the related source code files.
+By studying the example and refering to javadocs the flow and layering coalesced to a fitting picture.
+Most importatn concepts obtained:
+\begin{itemize}
+    \item The layering doesn't imply that in mvc some kind of view is always at the top.
+    A more fitting description is _event initiator_, in case of the server the network layer which receives request from the client.
+    \item Using an _enum_ provides access to a finite set of constants which hold their own name as value.
+    This is even faster than an integer for switching.
+    Perfect for entering commands
+    \item Observer pattern can be used to prevent upcalls from layers to layers above.
+    \item (G)UI can be made responsive using an additional thread for commands with latency, i.e. network communication.
+    \item Stream reading can be layered, e.g. a _DataOutputStream_ over a _BufferedOutputStream_ over a _FileOutputStream_.
+    \item The user interface must be informative.
+\end{itemize}
+
 
 \section{Method}
 
-\textbf{This section tells \textit{how} you solved the task.} \\
+The MVC approach was used to solve this problem. Although a bit overkill, practicing it will payoff over time.
+This meant to use various packages and to have high cohesion with low coupling. Additionally upcalls should be avoided.
 
-\noindent Explain how you worked when solving the tasks and how you evaluated that your solution met the requirements. Mention development tools and IDEs you used. \textit{Do not explain your solution and do not refer to code}, that belongs to the \textit{Result} section.
+
+The project is in pure Java, using the included libraries.
+Developing was done in Netbeans.
 
 \section{Result}
 
-\textbf{This section explains \textit{the result} of what you did.} \\
 
-\noindent Present your solution and prove that it meets the requirements. It is very important to \textit{state each requirement that is met} and explain \textit{how you met it}. You do this by including user interface screenshots, like the example in Figure \ref{fig:ui}, remember that figures must be explained and referenced in the text. Also include links to the code in your Git repository.  If you want the extra bonus point for a layered architecture, you must prove that also this requirement is met. You do this by explaining and motivating the layers and important design decisions.
+Link to public Github repository with codehttps://github.com/MemBernd/ID1212-blockingSockets
+\href{https://github.com/MemBernd/ID1212-blockingSockets}{https://github.com/MemBernd/ID1212-blockingSockets}
 
-Also, prove that you participated in writing the program, and that you understand it in detail. You prove this by explaining essential parts of the program.
+\subsection{Blocking TCP sockets}
+
+The socket on the client side is created in client.net.ServerConnection on lines 29-31.
+For a socket to be able to connect it needs an adress, composed of the host and a port, and a timeout.
+The _setSoTimeout()_ sets the time the socket is blocked.
+\\The server has its implementation of sockets in server.net.Server on lines 31.
+Aftewards it stays in a loop accepting connection.
+When it receives a request on the specified port (configured default of 54321), it accept it, receiving an available socket form the OS for further communication.
+This socket is passed to _handleClient()_ where timeouts are set.
+
+\subsection{Stateless client}
+
+The information of the game which have to tracked are:
+\begin{itemize}
+    \item current word trying to guess
+    \item progress in guessing the word
+    \item attempts left
+    \item score
+\end{itemize}
+The variables are stored in server.model.GameState.
+They are defined on lines 18-21.
+While the score is initialized at the creation of a client handler, the remaining variables are initialized on lines 15-78 inside _initializeGame()_ which gets called when the user starts a game.
+
+\subsection{Multithreaded client}
+
+Client.view.Interpreter, the class which the user interacts with, extends the _Thread_ class and isstarted by client.startup.Hangman.
+It creates a client.controller.Controller which itself creates a client.net.ServerConnection.
+This class holds an inner class, at line 56, _Listener_, extending _Runnable_.
+On line 35 of client.net.ServerConnection the second thread of every client is created, an instance of _Listener_.
+
+\subsection{Multithreaded server}
+
+The amount of threads of the server is 1 + amount of connected clients.
+The startup starts server.net.Server which listens permanently on line 33.
+When receiving a request it starts server.net.Handler, an extension to _Thread_.
+Since the users don't share any data, everyone having their own thread, a complete mvc, was selected.
+Because accepting a request on line 33 creates a new socket for each client, no need for an id or similar was needed to communicate a client with the correct thread.
 
 
+\subsection{Communication}
+Both, client \& server have access to protocol.Constants where some constans, such as the delimiter for the communication are defined.
+Since the client doesn't have to process the received messages in any way, it just prints them out.
+
+\subsection{Layering}
+The client is divided as follows:
+\begin{itemize}
+    \item The model is equivalent to the client.net package holding _ServerConnection_.
+    \item The controller resides in client.controller.
+    \item The view has classes in client.view, the most interesting one being _Interpreter_, the UI.
+    \item Client.startup.Hangman is the startup class.
+\end{itemize}
+
+On the server side, the layering is quite similar:
+\begin{itemize}
+    \item Server.model.GameState holds the game's state. Every server side client thread has its own.
+    \item Server.controller.Controller is the controller.
+    \item Equivalent to a view, in a sense of event driver, is the server.net package.
+    It contains _Server_ and (client)_Handler_.
+\end{itemize}
+
+To avoid a upcalls from client.net.ServerConnection to the view, client.net.OutputHandler has been created.
+The previously mentioned _Listener_ thread expects such a class as argument when instancing.
+The client.view.Interpreter has an extending class to _OutputHandler_ as a inner class which gets passed through the controller to ServerConnection.
+Since its a specialization, it can used wherever its superclass can be used.
+This enables it to print output without making an call to the view.
+
+\subsection{Informative UI}
+In Figure \ref{fig:ui} several of the information provided to the user and his input can be seen.
+The instructions at the start of the client, establishing a connection, starting a game, doing a correct (lucky) input and an incorrect one.
+
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[scale=0.8]{ui.png}
+    \caption{Instructions and game state on client side}
+    \label{fig:ui}
+  \end{center}
+\end{figure}
+
+Figure \ref{fig:multiple} shows 2 clients playing at once. Moreover, the timeout used can be seen on the server thread in the right bottom command line.
+
+\begin{figure}[h!]
+  \begin{center}
+    \includegraphics[scale=0.4]{multiple.png}
+    \caption{Concurrent players.}
+    \label{fig:multiple}
+  \end{center}
+\end{figure}
 
 \section{Discussion}
 
-\textbf{This section \textit{analysis} the result presented in the previous section.} \\
+All requirements have been met.
+Difficulties, once having an understanding, were only encountered regarding on how to use the functions.
+It was a lengthy process due to wanting to recreate an elegantly structured program.
+At some points the struture of the code itself suffered from it, e.g. server.model.GameState.finishes() needs cleaning.
 
-\noindent Summarize the requirements and \textit{clearly state which of them you have met}. What lessons have you learned and what problems did you face? How were the problems solved? Should you have done something differently?
+
 
 \section{Comments About the Course}
 
-Any comment(s) related to this course offering or to coming offerings is much appreciated. \textit{Please also tell approximately how much time you spent on the assignment}, including lectures and exercises. This is of great help for course evaluation.
+The code for the sockets is elegant.
+Surely enough it creates a bias towards how the implementation can/should be done, resulting in a similar code.
+I guess this is why it's mentioned that the copy cannot be copied, though it may be similar.
 
 \end{document}
