PDF was corrupt.

--- a/report/id1212-report-template.tex
+++ b/report/id1212-report-template.tex
@@ -187,4 +187,6 @@ The code for the sockets is elegant.
 Surely enough it creates a bias towards how the implementation can/should be done, resulting in a similar code.
 I guess this is why it's mentioned that the copy cannot be copied, though it may be similar.
 
+It took me about 17+-1 hours to do everything, watching videos, planning, coding and writing the report. I tracked the time with toggl.
+
 \end{document}
